# PerceptraderAI

./: .gitignore  README.md  environment.yml  main.py  package.py  project_to_text.py  pyproject.toml  requirements.txt  setup.py  structure.txt  text_to_project.py  trading-bot.txt
config/: credentials.json  settings.py
data/: external_data.py  fetcher.py  preprocessor.py
data/external_sources/: alpha_vantage.py  finnhub.py
docs/: index.md  usage.md
gui/: interface.py
models/: deepseek_model.py  evaluator.py  genetic_optimizer.py  model_loader.py  reinforcement_learning.py  trainer.py
scripts/: data_ingestion.py
sentiment/: sentiment_analysis.py  social_media_analysis.py
src/: log_viewer.py  orchestrator.py
src/perceptrader/: __init__.py  environment.py  optimization.py
src/perceptrader/config/: __init__.py  settings.py
src/perceptrader/data/: __init__.py  fetch.py  pipeline.py
src/perceptrader/gui/: __init__.py  dashboard.py  tk_dashboard.py
src/perceptrader/live/: __init__.py  base.py  execution.py  paper.py
src/perceptrader/models/: __init__.py  factory.py  ml.py  rl.py
src/perceptrader/risk/: __init__.py  management.py
src/perceptrader/strategy/: __init__.py  base.py  deeprl.py  (+2 more)
strategy/: capital_manager.py  risk_manager.py  signal_generator.py  strategy_optimizer.py
tests/: __init__.py  test_data.py  test_live.py  test_models,py  test_models.py  test_strategy.py
trade/: algorithmic_trading.py  executor.py  high_frequency_trading.py  mt5_connector.py  multi_asset_support.py
utils/: logger.py  notifier.py  timeframe_mapper.py
(+5 files in other folders)
